--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,8 @@
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
+  },
+  "paths": {
+    "tslib" : ["path/to/node_modules/tslib/tslib.d.ts"]
   }
 }
